# Otus_4

./: CMakeLists.txt
include/: Controller.h  Document.h  GraphicPrimitive.h  Model.h  View.h
src/: TestView.cpp  main.cpp
